fix: wrong width on firefox for android

--- a/popup/popup.scss
+++ b/popup/popup.scss
@@ -7,6 +7,12 @@
     max-height: 650px;
 }
 
+@media only screen and (max-width: 460px) {
+    .popup {
+        width: 100%;
+    }
+}
+
 header {
     flex-shrink: 0;
     white-space: nowrap;
